# observability-as-code

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
grafana-as-code/: .env.example  CLI_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  cli.py  requirements.txt
grafana-as-code/config/: config.yaml  datasources.json
grafana-as-code/docs/: OO_API_REFERENCE.md
grafana-as-code/examples/: examples.py  oo_examples.py
grafana-as-code/grafana_as_code/: __init__.py  cli.py  dashboard.py  dashboard_v2.py  datasource.py  variable.py
grafana-as-code/grafana_as_code/components/: __init__.py  datasource.py
grafana-as-code/scripts/: add_datasource.py  add_panel.py  add_variable.py  remove_datasource.py
grafana-as-code/src/: client.py  folder.py  panel.py
grafana-as-code/src/components/: panel.py  variable.py
grafana-as-code/tests/: test_client.py
